src/pages/collections/styles/local_adaptation_styles.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@200;300;400;500&display=swap');
/* COLOR SCHEMES */
/* New Mexico from https://www.awwwards.com/sites/adult-swim-singles-2016
   and https://visme.co/blog/website-color-schemes/
    
    rust (red):             #E27D60
    robin (light blue):     #95cbca
    circus peanut (orange): #E8A87C
    plum:                   #C38D9E
    torquoise:              #41B3A3
    */

body {
    font-family: 'Open Sans', sans-serif;
    background-color: #fff;
}


.collection-title-container {
    width: 100vw;
    padding: 7vw;
}

.collection-title {
    font-family: 'Oswald', sans-serif;
    font-variation-settings: 'wdth' 500, 'wght' 400;
    font-size: 10vh;
    text-shadow: 2px 1px #4f4f4f;
    color: #41B3A3;
    
}

.text-container {
    width: 80vw;
    margin-left: 10vw;
    margin-right: 10vw;
    
}

.text-container p {
    color: #4f4f4f;
    font-variation-settings: 'wdth' 500, 'wght' 500;

}

.text-start:first-child:first-letter {
    color: #E27D60;
    float: left;
    font-family: Georgia;
    font-size: 75px;
    line-height: 60px;
    padding-top: 4px;
    padding-right: 8px;
    padding-left: 3px;
  }

.divergent-top {
    width: 100vw;
    height: 50vh;
    display: grid;
    grid-template-columns: .5fr 2fr .5fr;
}

#line-chart-group-1 {
    width: 90vw;
    margin-left: 5vw;
}

#arch-chart-group-1 {
    width: 90vw;
    margin-left: 5vw;

}

#dashboard {
    width: 98vw;
    margin-left: 1vw;
}

